--- a/DatingAppSpa/package.json
+++ b/DatingAppSpa/package.json
@@ -24,8 +24,10 @@
     "alertifyjs": "^1.13.1",
     "angular2-jwt": "^0.2.3",
     "bootstrap": "^3.3.7",
+    "bootswatch": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^1.9.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
