--- a/DatingAppSpa/package.json
+++ b/DatingAppSpa/package.json
@@ -27,6 +27,7 @@
     "bootswatch": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^1.9.3",
     "ngx-gallery": "^5.10.0",
     "rxjs": "^5.5.6",
