--- a/DatingAppSpa/package.json
+++ b/DatingAppSpa/package.json
@@ -31,6 +31,7 @@
     "ngx-bootstrap": "^1.9.3",
     "ngx-gallery": "^5.10.0",
     "rxjs": "^5.5.6",
+    "time-ago-pipe": "^1.3.2",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
